fix: WC popup, checkbox, DApp name alignment

--- a/src/components/walletconnect/SessionList/styles.module.css
+++ b/src/components/walletconnect/SessionList/styles.module.css
@@ -9,6 +9,12 @@
   height: 56px;
 }
 
+.sessionListAvatar {
+  display: flex;
+  min-width: unset;
+  padding-right: var(--space-1);
+}
+
 .sessionListSecondaryAction {
   /* InputAdornment */
   right: 14px;
